# windows-thumbnail-preloader

./: .gitignore  Cargo.toml  build.rs  licence.txt  manifest.xml  readme.md
.github/workflows/: rust-build.yml  rust-release.yml
src/: main.rs  preloader.rs
