[package]
name = "windows-thumbnail-preloader"
authors = ["Connor Haigh"]
description = "windows-thumbnail-preloader is a command-line application for preloading thumbnails for Windows Explorer."
version = "0.1.0"
edition = "2021"

license = "MIT"
repository = "https://github.com/connorhaigh/windows-thumbnail-preloader"
readme = "readme.md"
keywords = ["windows", "win32", "explorer"]
categories = ["command-line-utilities", "os::windows-apis"]

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
dunce = "1.0.4"
thousands = "0.2.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-core = "0.52.0"

[dependencies.windows]
version = "0.52.0"
features = [
	"Foundation",
	"Win32",
	"Win32_Foundation",
	"Win32_UI_Shell",
	"Win32_UI_Shell_Common",
	"Win32_UI_Shell_PropertiesSystem",
	"Win32_System_Com",
	"Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
]
